--- a/src/Modules/ProvidersModule/Views/ProviderInfoView.xaml
+++ b/src/Modules/ProvidersModule/Views/ProviderInfoView.xaml
@@ -24,9 +24,9 @@
 
         <ResourceDictionary>
 
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/Dragablz;component/Themes/Generic.xaml" />
-            </ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary.MergedDictionaries>
+                    <ResourceDictionary Source="pack://application:,,,/Dragablz;component/themes/materialdesign.xaml" />
+                </ResourceDictionary.MergedDictionaries>
             <DataTemplate x:Key="DataFieldDataTemplate">
                 <karveControls:DataField LabelText="{Binding LabelText, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                          TextContent="{Binding TextContent, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
@@ -450,16 +450,25 @@
 
     </UserControl.Resources>
     <Grid ShowGridLines="False">
-
-        <TabControl Style="{StaticResource SimpleStyle}">
+<ScrollViewer>        <dragablz:TabablzControl TabStripPlacement="Left" BorderThickness="0">
+            <dragablz:TabablzControl.ItemContainerStyle>
+                <Style TargetType="{x:Type dragablz:DragablzItem}" BasedOn="{StaticResource MaterialDesignDragableTabItemVerticalStyle}">
+                    <Setter Property="Width" Value="200" />
+                    <Setter Property="Height" Value="40" />
+                    <Setter Property="FontFamily" Value="Arial"/>
+                </Style>
+            </dragablz:TabablzControl.ItemContainerStyle>
+            <dragablz:TabablzControl.InterTabController>
+                <dragablz:InterTabController />
+            </dragablz:TabablzControl.InterTabController>
             <TabItem Name="General"  Header="General" HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch" VerticalAlignment="Stretch" VerticalContentAlignment="Stretch">
 
                 <Grid ShowGridLines="False">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="10*"></RowDefinition>
-                        <RowDefinition Height="90*"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
                     </Grid.RowDefinitions>
-                    <ItemsControl x:Name="upperPart"  Grid.Row="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding UpperValueCollection}" ItemTemplateSelector="{StaticResource ResourceKey=BasicTemplateSelector}">
+                    <ItemsControl x:Name="upperPart"  Grid.Row="0" HorizontalAlignment="Stretch" VerticalAlignment="Top" ItemsSource="{Binding UpperValueCollection}" ItemTemplateSelector="{StaticResource ResourceKey=BasicTemplateSelector}">
                         <ItemsControl.ItemsPanel>
                             <ItemsPanelTemplate>
                                 <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Orientation="Horizontal"/>
@@ -471,7 +480,7 @@
                     <ItemsControl x:Name="middlePart" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="1" ItemsSource="{Binding MiddleValueCollection}" ItemTemplateSelector="{StaticResource ResourceKey=BasicTemplateSelector}">
                         <ItemsControl.ItemsPanel>
                             <ItemsPanelTemplate>
-                                <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Orientation="Vertical" Height="600"/>
+                                <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Orientation="Vertical"/>
                             </ItemsPanelTemplate>
                         </ItemsControl.ItemsPanel>
                     </ItemsControl>
@@ -710,11 +719,68 @@
              </Grid>
                     </Grid>
             </TabItem>
+        <TabItem Name="Evaluation" Header="Evaluación">
+            <ScrollViewer>
+                <Grid>
+                    <DockPanel>
+                        <GroupBox Header="Criterios">
+                            <WrapPanel Orientation="Horizontal">
+                                <StackPanel Orientation="Vertical">
+                                    <CheckBox Name="Survey" Content="Cuestionario"></CheckBox>
+                                    <Label Name="Points" Content="Puntuación"></Label>
+                                    <local:RatingsControl x:Name="ProviderSurveyRatings" 
+                                                          Value="1"
+                                                          NumberOfStars="5"
+                                                          Margin="5"
+                                                          StarForegroundColor="Orange"           
+                                                          BackgroundColor="LightGray"
+                                                          HorizontalAlignment="Left"/>
+                                </StackPanel>
+                                <CheckBox Margin="40, 0, 0, 0" Name="ExclusiveProvider" Content="Exclusividad">
+
+                                </CheckBox>
+                                <CheckBox Margin="40, 0, 0, 0" Name="HistoricProvider" Content="Histórico">
+
+                                </CheckBox>
+                                <CheckBox Margin="40, 0, 0, 0" Name="ChallengeProvider" Content="Prueba">
+
+                                </CheckBox>
+                                <CheckBox Margin="40, 0, 0, 0" Name="CertifiedProvider" Content="Certificado u Homologación">
+
+                                </CheckBox>
+                                <CheckBox Margin="40, 0, 0, 0" Name="NoConfirmityProvider" Content="Numero Maximo No conformidades">
+
+                                </CheckBox>
+                                <Label Margin="40, 0, 0, 0" Content="F.Aprobación"></Label>
+                                <DatePicker Name="ProviderApproveDate"></DatePicker>
+                                <Label Margin="40, 0, 0, 0" Content="F.Validez"></Label>
+                                <DatePicker Name="ProviderValidDate"></DatePicker>
+                            </WrapPanel>
+                        </GroupBox>
+                        <Grid>
+                            <Grid.Resources>
+
+                                <xcdg:DataGridCollectionViewSource x:Key="ProviderInspection" 
+                                                                   Source="{Binding}">
+                                </xcdg:DataGridCollectionViewSource>
+                            </Grid.Resources>
+
+                           
+                        </Grid>
+                        <Grid>
+                           
+                        </Grid>
+                    </DockPanel>
+                </Grid>
+            </ScrollViewer>
+        </TabItem>
 
 
-        </TabControl>
+            </dragablz:TabablzControl>
+</ScrollViewer>
+
+    </Grid>
         
-            </Grid>
 </UserControl>
 
 
